// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`countsToChartData handles null results 1`] = `
Object {
  "shouldCensor": Object {
    "datasets": Array [
      Object {
        "data": Array [
          1,
          2,
          3,
        ],
        "label": "# of Votes",
      },
    ],
    "labels": Array [
      "Yes",
      "No",
      "Didn't vote",
    ],
  },
}
`;

exports[`countsToChartData works 1`] = `
Object {
  "shouldCensor": Object {
    "datasets": Array [
      Object {
        "data": Array [
          1,
          2,
          3,
        ],
        "label": "# of Votes",
      },
    ],
    "labels": Array [
      "Yes",
      "No",
      "Didn't vote",
    ],
  },
  "shouldStrike": Object {
    "datasets": Array [
      Object {
        "data": Array [
          2,
          2,
          2,
          2,
        ],
        "label": "# of Votes",
      },
    ],
    "labels": Array [
      "Up voters",
      "Down voters",
      "Poster",
      "Disputers",
    ],
  },
}
`;

exports[`countsToDataTable works 1`] = `
Array [
  Array [
    "Censor?",
    "Total",
    "Strike up voters",
    "Strike down voters",
    "Strike poster",
    "Strike disputers",
  ],
  Array [
    "Yes",
    1,
    0,
    0,
    0,
    0,
  ],
  Array [
    "No",
    2,
    2,
    2,
    2,
    2,
  ],
  Array [
    "Didn't vote",
    3,
    3,
    3,
    3,
    3,
  ],
]
`;
